Fix username line break in profile

--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -82,6 +82,7 @@
 }
 
 .noPosts {
+  min-width: 225px;
   height: 100%;
   display: flex;
   flex-direction: column;
